# Rakuten_Data_Science

./: .gitignore  Colab_dummy.ipynb  README.md  data_exploration_artur.py  download_dataset.py  ini.py  pyproject.toml  rakuten.ipynb  rakuten.py  requirements.txt  submit  submit_res_fine  submit_res_fr  train_cnn_256.py  train_resnet50_finetune.py  train_resnet50_frozen.py
docs/: WORKFLOW.md
notebooks/: git_setup_on_colab.ipynb  image_modeling.ipynb  rakuten_images.ipynb  test_clean.ipynb
notebooks_archive/: Camembert_on_GPU.ipynb  ConvNeXT_Base_I.py  README.md  image_modeling.ipynb  nb_ion_test.ipynb  textual_modeling.ipynb  textual_modeling_part2.ipynb  tfidf_remod.ipynb
outputs/01_tabular_data_exploration/: summary.json
outputs/cnn_256/: cnn_256_class_indices.json  cnn_256_history.csv  cnn_256_summary.json
outputs/image_modeling/: id2label.json
outputs/resnet50_finetune/: classification_report.txt  confusion_matrix.npy  history.json  label_mapping.json  summary.json  training_log.csv  val_predictions.csv
outputs/resnet50_frozen/: classification_report.txt  confusion_matrix.npy  history.json  summary.json  training_log.csv  val_predictions.csv
outputs/tabular_eda/: x_test_info.txt  y_train_info.txt
outputs_archive/tabular_eda/: merged_train_info.txt  summary.json  x_train_info.txt
scripts/: setup_data.ps1  setup_data.sh
src/: image_modeling_github_outputs.ipynb
streamlit_app/: Home.py  Home_ion.py  app_2.py  app_felix.py  app_ion.py
streamlit_app/config/: prdtypecode_mapping.json
streamlit_app/pages/: 2_Data_Exploration.py  (+1 more)
tests/: README.md
(+100 files in other folders)
